syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "Proto";

// login

service UserLoginService {
  rpc checkUser(UserLoginRequest) returns (UserLoginResponse);
}

message UserLoginRequest {
  string userId = 1;
  string password = 2;
}

message UserLoginResponse {
  bool existsUser = 1;
  string userId = 2;
  string role = 3;
}

// email Validate to register

service UserRegisterService {
  rpc checkEmailValidation(UserRegisterRequest) returns (UserRegisterResponse);
}

message UserRegisterRequest {
  string email = 1;
}

message UserRegisterResponse {

}


import "google/rpc/status.proto";
import "envoy/service/auth/v3/attribute_context.proto";

service Authorization {
  rpc Check(CheckRequest) returns (CheckResponse);
}

message CheckRequest {
  envoy.service.auth.v3.AttributeContext attributes = 1;
}

message CheckResponse {
  oneof response {
    OkHttpResponse ok_response = 2;
    DeniedHttpResponse denied_response = 3;
  }

  google.rpc.Status status = 1;
}

message OkHttpResponse {
  map<string, string> headers = 1;
}

message DeniedHttpResponse {
  string status = 1;
  string body = 2;
  map<string, string> headers = 3;
}